@@ -6,12 +6,6 @@ plugins {
     id 'info.solidsoft.pitest' version '1.9.0'
 
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    
-    // id 'application'
-    // id 'java-library'
-
-    // id 'org.javamodularity.moduleplugin' version '1.8.12'
-    // id 'org.beryx.jlink' version '2.25.0'
 }
 
 group 'edu.rose-hulman.csse'
@@ -21,12 +15,9 @@ repositories {
     mavenCentral()
 }
 
-// apply plugin: 'java'
-// sourceCompatibility = '17'
-// targetCompatibility = '17'
-
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
     compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs.toolVersion.get()}"
@@ -45,13 +36,17 @@ spotbugsMain {
     }
 }
 
+spotbugsTest {
+    onlyIf { false }
+}
+
 test {
     useJUnitPlatform()
 }
 
 pitest {
     junit5PluginVersion = '1.0.0'
-    targetClasses = ['gamedatastructures.*', 'graphs.*', 'controller.*', 'integration.*']  //by default "${project.group}.*"
+    targetClasses = ['data.*', 'domain.*', 'integration.*']  //by default "${project.group}.*"
     pitestVersion = '1.9.0' //not needed when a default PIT version should be used
     threads = 4
     outputFormats = ['XML', 'HTML']
@@ -114,51 +109,13 @@ jacocoTestReport.finalizedBy(codeCoverageInfo)
 //
 // --------------------------------------------------------------------------------
 
-
-// application.mainClass = 'gui.Catan'
-// application.mainModule = 'gui'
-
 javafx {
     version "11" // changed from 20 to 11
     modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml']
 }
 
-
-// this breaks pitest
-
-// java {
-//     toolchain {
-//         languageVersion = JavaLanguageVersion.of(17)
-//     }
-// }
-
-
-
-// end stuff that breaks pitest
-
-// jlink {
-//     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-//     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-//     launcher {
-//         name = 'app'
-//     }
-// }
-
-// jlinkZip {
-//     group = 'distribution'
-// }
-
-// run {
-//     doFirst {
-//         jvmArgs = [
-//                 '--module-path', classpath.asPath,
-//                 '--add-modules', 'javafx.controls', 'javafx.fxml'
-//         ]
-//     }
-// }
-
 compileJava {
-    options.release = 11 // changed from 17 to 11
+    options.release = 17
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
@@ -166,7 +123,3 @@ compileJava {
         ]
     }
 }
-
-// tasks.withType(JavaCompile) {
-//     options.release = 17
-// }
